<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">soccerman</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_team">Add Team</string>
    <string name="team_name">Team Name</string>
    <string name="home_ground">Home Ground (Optional)</string>
    <string name="create">Create</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_teams">My Teams</string>
    <string name="join_team">Join Team</string>
    <string name="join">Join</string>
    <string name="no_teams">No teams to display</string>
    <string name="no_matches">No matches to display</string>
    <string name="no_attendances">No players in team</string>
    <string name="no_players">No players in team</string>
    <string name="manager">"Manager: "</string>
    <string name="opponent">Opponent</string>
    <string name="venue">Venue</string>
    <string name="add_match">Add Match</string>
    <string name="view_matches">View Matches</string>
    <string name="view_players">View Players</string>
    <string name="view_team_code">View/Change Team Code</string>
    <string name="change_code">Generate new team code</string>
    <string name="set_date">Set Game Date</string>
    <string name="set_time">Set Game Time</string>
    <string name="chk_home">Home game?</string>
    <string name="chk_player_manager">Player Manager?</string>
    <string name="change_attendance">Change Attendance</string>
    <string name="set_attendance">Set Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="edit_lineup">Edit Lineup</string>
    <string name="already_registered">Already registered? Login now</string>
    <string name="register_now">I don\'t have an account. Register now</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="back_to_teams">Back to team list</string>
    <string name="back_to_matches">Back to match list</string>
    <string name="remove_player">Remove Player</string>
    <string name="change_password">Change Password</string>

</resources>