<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3b3b3b">
     
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/welcome"
              android:textSize="40sp"
              android:gravity="center"
              android:layout_marginTop="20dip"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_team"
        android:textSize="20sp"
        android:textColor="#21dbd4"
        android:textStyle="bold"
        android:id="@+id/btnAddTeam"
        android:layout_marginTop="25dip"
        android:background="@null"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_teams"
        android:textSize="20sp"
        android:textColor="#21dbd4"
        android:textStyle="bold"
        android:id="@+id/btnMyTeams"
        android:layout_marginTop="25dip"
        android:background="@null"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_team"
        android:textSize="20sp"
        android:textColor="#21dbd4"
        android:textStyle="bold"
        android:id="@+id/btnJoinTeam"
        android:layout_marginTop="25dip"
        android:background="@null"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textColor="#21dbd4"
        android:textStyle="bold"
        android:id="@+id/btnLogout"
        android:layout_marginTop="25dip"
        android:background="@null"/>
 
</LinearLayout>