<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b3b3b" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/change_password"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/old_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
         
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/new_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
         
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/confirm_new_password" />

        <EditText
            android:id="@+id/confirm_new_password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView 
            android:id="@+id/change_password_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:padding="5dip"
            android:textStyle="bold" 
            android:textIsSelectable="false" />
 
        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/change_password" />
 
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="#21dbd4"
            android:textStyle="bold" />
    </LinearLayout>
 
</ScrollView>